force-app/main/default/objects/Account/fields/Client_Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Client_Managed_By__c</fullName>
    <description>Business division responsible for the main relationship management in Standard Bank. This field is used by MI to segment the Client. This field will be updated after the Client Base reviews have been done as a data component.</description>
    <inlineHelpText>Business division responsible for the main relationship management in Standard Bank</inlineHelpText>
    <label>Client Managed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Enablers</fullName>
            </value>
            <value>
                <fullName>General Management</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Transactional Products and Services</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
            </value>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>