force-app/main/default/objects/Account/fields/Client_Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Client_Marketing_Strategy__c</fullName>
    <inlineHelpText>Indication of the high level marketing and entertainment engagements planned with the Client (1500 characters or less)</inlineHelpText>
    <label>Client Marketing Strategy</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>