force-app/main/default/objects/Account/fields/Client_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Record Type</label>
    <type>Text</type>
</CustomField>