force-app/main/default/objects/Account/fields/Client_Relationship_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Client_Relationship_Hierarchy__c</fullName>
    <description>Hierarchy level for this Client.</description>
    <inlineHelpText>Represents where this Client belongs in the relationship hierarchy of the Client group. When selecting a ‘Group or Immediate Parent’ level, and you are not the CC, you will need approval from the CC.</inlineHelpText>
    <label>Client Relationship Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Immediate Parent</fullName>
            </value>
            <value>
                <fullName>Group Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>