force-app/main/default/objects/Account/fields/Client_Segment__c.field-meta.xml
<CustomField>
    <fullName>Client_Segment__c</fullName>
    <description>case#1263 - Rudolf Niehaus
AB – Flow or Single Service Client
ABC – Multi-Product, Low Ratio Client
ABCD – Multi-Product, High Ratio Client</description>
    <inlineHelpText>AB – Flow or Single Service Client
ABC – Multi-Product, Low Ratio Client
ABCD – Multi-Product, High Ratio Client</inlineHelpText>
    <label>Client Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Assigned</fullName>
                <default>true</default>
                <label>Not Assigned</label>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>ABCD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>