force-app/main/default/objects/Account/fields/Client_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Client_Strategy__c</fullName>
    <description>case#1263 - Rudolf Niehaus
Overall objective, Where/how decision making is done, Opportunities we need to be looking for, Brief plan on how to deliver strategy
EN#240
This field was renamed due to the Client Plan phase 1 project. Label and API name have not been aligned because it would require updating code logic.</description>
    <inlineHelpText>Standard Bank&apos;s / Stanbic&apos;s Bank strategy to support the Client&apos;s long term strategy and short term objectives (1500 characters or less)</inlineHelpText>
    <label>Our Strategy For This Client</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>