force-app/main/default/objects/Account/fields/Client_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Sector__c</fullName>
    <description>The Client Sub-Sector further defines the sector in which the Client operates. This field is used in CRT and MI reporting. The business rule where a Client Sub-Sector cannot be dependent on more than one Client Sector needs to be adhered to at all times. Do not create or assign a duplicate Client Sub-Sector to more than one Client Sector</description>
    <inlineHelpText>The Client Sub-Sector further defines the sector in which the Client operates</inlineHelpText>
    <label>Client Sub-Sector</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Sector__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Agriculture Commodity Traders</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Alternative Investment Vehicles</fullName>
            </value>
            <value>
                <fullName>Asset Managers</fullName>
            </value>
            <value>
                <fullName>Automobiles</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Base Metals</fullName>
            </value>
            <value>
                <fullName>Brokers and Exchanges</fullName>
            </value>
            <value>
                <fullName>Bulk Commodities</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Central Banks</fullName>
            </value>
            <value>
                <fullName>Centralised Power</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Construction Services</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Development Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Diamonds</fullName>
            </value>
            <value>
                <fullName>Diversified Industrials</fullName>
            </value>
            <value>
                <fullName>Diversified Mining</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Equipment Manufacturers</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Government Departments</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>