force-app/main/default/objects/Account/fields/Client_Summary_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Client_Summary_Last_Updated__c</fullName>
    <description>EN-0695-Last Date/Time when Summary field was updated</description>
    <inlineHelpText>The Date and Time that the Client Summary values were last updated / calculated</inlineHelpText>
    <label>Client Summary Last Updated</label>
    <type>DateTime</type>
</CustomField>