force-app/main/default/objects/Account/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <formula>Case( api_Client_Type__c ,&quot;I&quot;,&quot;Individual&quot;,&quot;E&quot;,&quot;Enterprise&quot;,&quot;UNASSIGNED&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Type</label>
    <type>Text</type>
</CustomField>