force-app/main/default/objects/Account/fields/Client_Type_OnBoard__c.field-meta.xml
<CustomField>
    <fullName>Client_Type_OnBoard__c</fullName>
    <description>Client Type / Entity Type</description>
    <inlineHelpText>The type of Client that will be conducting business with Standard Bank</inlineHelpText>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Investment Advisor</fullName>
            </value>
            <value>
                <fullName>Non-Financial Business</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organisation</fullName>
            </value>
            <value>
                <fullName>Public Sector Body</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>