force-app/main/default/objects/Account/fields/ClientPersona_IS__c.field-meta.xml
<CustomField>
    <fullName>ClientPersona_IS__c</fullName>
    <description>17.11.2017 - Field created in requirement of US-2349: For NBFI only – break up stats per client persona (Client, Account Manager, Back Office)</description>
    <label>Client Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Account/Asset Manager</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>