force-app/main/default/objects/Account/fields/Commercial_Strategic_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Strategic_Portfolio__c</fullName>
    <description>This field indicates whether or not the client resides in a strategic portfolio of Commercial Banking that is supported by specialist teams i.e. Franchising, Agriculture, Public Sector and Natural Resources (US-1117).</description>
    <inlineHelpText>This field indicates whether or not the client resides in a strategic portfolio of Commercial Banking that is supported by specialist teams i.e. Franchising, Agriculture, Public Sector and Natural Resources.</inlineHelpText>
    <label>Commercial Strategic Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Enterprise Development</fullName>
            </value>
            <value>
                <fullName>Franchising</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>Other (Commercial)</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>