force-app/main/default/objects/Account/fields/Commercial_Tier__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Tier__c</fullName>
    <description>The field determines a commercial tier and is fed from the PMT system (EN-908).</description>
    <inlineHelpText>The field determines a commercial tier and is fed from the PMT system.</inlineHelpText>
    <label>Commercial Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>