force-app/main/default/objects/Account/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>SFP-9319 [c] Commodities which the client deals with.</description>
    <inlineHelpText>Please see &quot;Commodities&quot; Component on the sidebar to view descriptions.</inlineHelpText>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Aquaculture</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Floriculture</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Fruit</fullName>
            </value>
            <value>
                <fullName>Grain Crops</fullName>
            </value>
            <value>
                <fullName>Inputs</fullName>
            </value>
            <value>
                <fullName>Oil-Seed Crops</fullName>
            </value>
            <value>
                <fullName>Other Crops</fullName>
            </value>
            <value>
                <fullName>Poultry</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Specialized</fullName>
            </value>
            <value>
                <fullName>Vegetables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>