force-app/main/default/objects/Account/fields/Completeness_Score__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SFP-9319 [c] The total completeness score for a record.</description>
    <label>Completeness Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>