force-app/main/default/objects/Account/fields/Contact_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Strategy__c</fullName>
    <description>SFP-9319 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template</description>
    <inlineHelpText>This is the frequency with which the client must be contacted, the designated manner of contact and the appropriate purpose (should there be a predefined frequency and set objectives)</inlineHelpText>
    <label>Contact Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>