force-app/main/default/objects/Account/fields/Core_Team_Members_on_Internal_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Core_Team_Members_on_Internal_Meetings__c</fullName>
    <description>EN-0695-Amount of Core CST Members that Attended Internal Meetings</description>
    <inlineHelpText>Number of the Core Client Team Members who attended the Internal Meetings scheduled on this Client</inlineHelpText>
    <label>Core Team Members on Internal Meetings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>