force-app/main/default/objects/Account/fields/Correspondence_Addr_Line1__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Addr_Line1__c</fullName>
    <description>This is the first line of the office address</description>
    <inlineHelpText>The first line of the office address (40 characters or less)</inlineHelpText>
    <label>Correspondence Address Line1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>