force-app/main/default/objects/Account/fields/Correspondence_Addr_Line2__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Addr_Line2__c</fullName>
    <description>This is the second line of the office address</description>
    <inlineHelpText>The second line of the office address (40 characters or less)</inlineHelpText>
    <label>Correspondence Address Line2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>