force-app/main/default/objects/Account/fields/Correspondence_City__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_City__c</fullName>
    <description>This is the City where the office is located</description>
    <inlineHelpText>The city where the office is located (40 characters or less)</inlineHelpText>
    <label>Correspondence City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>