force-app/main/default/objects/Account/fields/Correspondence_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Postal_Code__c</fullName>
    <description>This is the postal code of where the office is located</description>
    <inlineHelpText>The postal code of where the office is located (40 characters or less)</inlineHelpText>
    <label>Correspondence Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>