force-app/main/default/objects/Account/fields/Correspondence_Province_Region__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Province_Region__c</fullName>
    <description>The province / region / county where the office is located</description>
    <inlineHelpText>The province / region / county where the office is located (40 characters or less)</inlineHelpText>
    <label>Correspondence Province/Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>